--- a/index.html
+++ b/index.html
@@ -656,6 +656,22 @@
                   "
                 >
                   <a
+                    href="http://siabsen-smpn2cigalontang.my.id/"
+                    target="_blank"
+                    style="
+                      background-color: #007bff;
+                      color: white;
+                      padding: 6px 12px;
+                      border-radius: 4px;
+                      text-decoration: none;
+                      display: inline-block;
+                      font-size: 14px;
+                      margin-right: 10px;
+                    "
+                  >
+                    Website
+                  </a>
+                  <a
                     href="https://github.com/aszahra/siabsen"
                     target="_blank"
                     style="
@@ -678,7 +694,14 @@
       </div>
     </div>
 
-    <div style="text-align: center; font-style: italic; color: #358181; font-size: 12px;">
+    <div
+      style="
+        text-align: center;
+        font-style: italic;
+        color: #358181;
+        font-size: 12px;
+      "
+    >
       <p>2025</p>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
